# b9ui

./: README.md  pyproject.toml
.github/: FUNDING.yml
b9ui/: app.py  attrs.py  base.py  responses.py  routing.py  types.py
b9ui/components/: __init__.py  body.py  breadcrumb.py  button.py  card.py  header.py  input.py  link.py  navigation_bar.py  page.py  product_menu.py  product_menu_bar.py  side_panel.py  table.py  toast.py
b9ui/html/: __init__.py  svg.py
b9ui/layouts/: __init__.py  app_layout.py  project_layout.py  table_editor_layout.py
b9ui/utils/: module_loading.py
examples/dashboard05/: main.py
examples/dashboard05/app/: layout.py  page.py
examples/dashboard05/app/settings/: page.py
examples/dashboard05/components/: __init__.py  header.py  navigation_link.py  search.py
examples/dashboard05/static/css/: default.css
examples/hello-world/app/: layout.py  page.py
